--- a/index.html
+++ b/index.html
@@ -879,7 +879,7 @@
                     </div>
                 </div>
                 <p>&copy;Copyright 2016 - Isaac Cho. All rights reserved.</p>
-                <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=n&d=KqkpltEfAFT4sN_DiBPVzwFVHM6Y9U12b5u6en4y1us&co=747376&cmo=ffd600&cmn=ff0000"></script>
+                <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=ybuX8w5orkVnB2RvcXIg3ZDYtVEmO3iueS4Kq64s1cc&cl=ffffff&w=a"></script>
                 <!--<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?u=f4sL&d=KqkpltEfAFT4sN_DiBPVzwFVHM6Y9U12b5u6en4y1us"></script>					&lt;!&ndash;-->
                         <!--All links in the footer should remain intact. -->
                         <!--Licenseing information is available at: http://bootstraptaste.com/license/-->
